ESG-111/Topic 5/CLC/error.txt
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:70:89: error: no matching function for call to 'arduino::HardwareSPI::HardwareSPI(SERCOM*, const uint8_t&, const uint8_t&, const uint8_t&, SercomSpiTXPad, SercomRXPad)'
 SPIClass rfidSPI(&sercom0, MISO_PIN, SCK_PIN, MOSI_PIN, SPI_PAD_3_SCK_1, SERCOM_RX_PAD_2);
                                                                                         ^
In file included from C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\libraries\SPI/SPI.h:24:0,
                 from c:\Users\schlo\OneDrive\Documents\Arduino\libraries\Adafruit_Circuit_Playground/utility/Adafruit_CPlay_LIS3DH.h:32,
                 from c:\Users\schlo\OneDrive\Documents\Arduino\libraries\Adafruit_Circuit_Playground/Adafruit_Circuit_Playground.h:21,
                 from c:\Users\schlo\OneDrive\Documents\Arduino\libraries\Adafruit_Circuit_Playground/Adafruit_CircuitPlayground.h:3,
                 from C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:10:
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:104:7: note: candidate: constexpr arduino::HardwareSPI::HardwareSPI()
 class HardwareSPI
       ^~~~~~~~~~~
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:104:7: note:   candidate expects 0 arguments, 6 provided
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:104:7: note: candidate: constexpr arduino::HardwareSPI::HardwareSPI(const arduino::HardwareSPI&)
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:104:7: note:   candidate expects 1 argument, 6 provided
C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:70:10: error: cannot declare variable 'rfidSPI' to be of abstract type 'arduino::HardwareSPI'
 SPIClass rfidSPI(&sercom0, MISO_PIN, SCK_PIN, MOSI_PIN, SPI_PAD_3_SCK_1, SERCOM_RX_PAD_2);
          ^~~~~~~
In file included from C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\libraries\SPI/SPI.h:24:0,
                 from c:\Users\schlo\OneDrive\Documents\Arduino\libraries\Adafruit_Circuit_Playground/utility/Adafruit_CPlay_LIS3DH.h:32,
                 from c:\Users\schlo\OneDrive\Documents\Arduino\libraries\Adafruit_Circuit_Playground/Adafruit_Circuit_Playground.h:21,
                 from c:\Users\schlo\OneDrive\Documents\Arduino\libraries\Adafruit_Circuit_Playground/Adafruit_CircuitPlayground.h:3,
                 from C:\Users\schlo\OneDrive\Documents\Arduino\esp32_txrx_test\esp32_txrx_test.ino:10:
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:104:7: note:   because the following virtual functions are pure within 'arduino::HardwareSPI':
 class HardwareSPI
       ^~~~~~~~~~~
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:109:21: note: 	virtual uint8_t arduino::HardwareSPI::transfer(uint8_t)
     virtual uint8_t transfer(uint8_t data) = 0;
                     ^~~~~~~~
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:110:22: note: 	virtual uint16_t arduino::HardwareSPI::transfer16(uint16_t)
     virtual uint16_t transfer16(uint16_t data) = 0;
                      ^~~~~~~~~~
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:111:18: note: 	virtual void arduino::HardwareSPI::transfer(void*, size_t)
     virtual void transfer(void *buf, size_t count) = 0;
                  ^~~~~~~~
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:114:18: note: 	virtual void arduino::HardwareSPI::usingInterrupt(int)
     virtual void usingInterrupt(int interruptNumber) = 0;
                  ^~~~~~~~~~~~~~
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:115:18: note: 	virtual void arduino::HardwareSPI::notUsingInterrupt(int)
     virtual void notUsingInterrupt(int interruptNumber) = 0;
                  ^~~~~~~~~~~~~~~~~
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:116:18: note: 	virtual void arduino::HardwareSPI::beginTransaction(arduino::SPISettings)
     virtual void beginTransaction(SPISettings settings) = 0;
                  ^~~~~~~~~~~~~~~~
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:117:18: note: 	virtual void arduino::HardwareSPI::endTransaction()
     virtual void endTransaction(void) = 0;
                  ^~~~~~~~~~~~~~
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:120:18: note: 	virtual void arduino::HardwareSPI::attachInterrupt()
     virtual void attachInterrupt() = 0;
                  ^~~~~~~~~~~~~~~
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:121:18: note: 	virtual void arduino::HardwareSPI::detachInterrupt()
     virtual void detachInterrupt() = 0;
                  ^~~~~~~~~~~~~~~
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:123:18: note: 	virtual void arduino::HardwareSPI::begin()
     virtual void begin() = 0;
                  ^~~~~
C:\Users\schlo\AppData\Local\Arduino15\packages\arduino\hardware\samd\1.8.14\cores\arduino/api/HardwareSPI.h:124:18: note: 	virtual void arduino::HardwareSPI::end()
     virtual void end() = 0;
                  ^~~
exit status 1

Compilation error: no matching function for call to 'arduino::HardwareSPI::HardwareSPI(SERCOM*, const uint8_t&, const uint8_t&, const uint8_t&, SercomSpiTXPad, SercomRXPad)'